<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="model" type="com.authsamples.basicmobileapp.views.transactions.TransactionItemViewModel" />
    </data>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:padding="5dp">

        <TableLayout android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:layout_marginBottom="5dp">

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp">

                <View
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:text="@string/transaction_id"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/TextViewLabelStyle"/>

                <TextView
                        android:id="@+id/transaction_id"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@{model.transaction.id}"
                        style="@style/TextViewValueStyle"/>

                <View
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp">

                <View
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:text="@string/investor_id"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/TextViewLabelStyle"/>

                <TextView
                        android:id="@+id/investor_id"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@{model.transaction.investorId}"
                        style="@style/TextViewValueStyle"/>

                <View
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp">

                <View
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:text="@string/amount_usd"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/TextViewLabelStyle"/>

                <TextView
                        android:id="@+id/amount_usd"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@{model.getAmountUsd()}"
                        style="@style/TextViewMoneyStyle"/>

                <View
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
            </TableRow>

        </TableLayout>

        <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider"/>

    </LinearLayout>
</layout>