<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TableLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp">

            <View
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            <ImageView
                    android:id="@+id/company_image_id"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_gravity="left"
                    android:scaleType="fitStart"
                    app:srcCompat="@mipmap/ic_launcher_round"
                    style="@style/ImageRowValueStyle"
                />

            <TextView
                    android:id="@+id/company_name"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_gravity="left"
                    android:textStyle="bold"
                    style="@style/ImageRowLabelStyle" />

            <View
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
        </TableRow>


        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp">

            <View
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/target_usd"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/TextViewLabelStyle"/>

            <TextView
                    android:id="@+id/target_usd"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/TextViewMoneyStyle"/>

            <View
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp">

            <View
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/investment_usd"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/TextViewLabelStyle"/>

            <TextView
                    android:id="@+id/investment_usd"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/TextViewMoneyStyle"/>

            <View
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp">

            <View
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/no_investors"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/TextViewLabelStyle"/>

            <TextView
                    android:id="@+id/no_investors"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/TextViewValueStyle"/>

            <View
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
        </TableRow>

    </TableLayout>

    <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider"/>

</LinearLayout>